--- a/game_client/game_client.vcxproj
+++ b/game_client/game_client.vcxproj
@@ -11,18 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="export\include\reversi\remoting\file_game_logger_factory.hpp" />
-    <ClInclude Include="export\include\reversi\remoting\game_logger_factory.hpp" />
-    <ClInclude Include="export\include\reversi\remoting\multiplayer_match.hpp" />
-    <ClInclude Include="export\include\reversi\remoting\multiplayer_match_messenger.hpp" />
-    <ClInclude Include="export\include\reversi\remoting\multiplayer_match_registry.hpp" />
+    <ClInclude Include="export\include\reversi\remoting\remote_game.hpp" />
     <ClInclude Include="include\stdafx.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\file_game_logger_factory.cpp" />
-    <ClCompile Include="src\multiplayer_match.cpp" />
-    <ClCompile Include="src\multiplayer_match_messenger.cpp" />
-    <ClCompile Include="src\multiplayer_match_registry.cpp" />
+    <ClCompile Include="src\remote_game.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -34,7 +27,7 @@
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E892C3C5-11B6-4243-806E-02EC06C00892}</ProjectGuid>
+    <ProjectGuid>{8FCBC6A0-539F-4D50-B9F3-E49201DFE14F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>game_logic</RootNamespace>
   </PropertyGroup>
@@ -72,6 +65,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;c:\libraries\boost\boost-1.56.0.1</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4267</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -89,6 +83,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;c:\libraries\boost\boost-1.56.0.1</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4267</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
