--- a/reversi/reversi.vcxproj.filters
+++ b/reversi/reversi.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="include\reversi\game_board_renderer.hpp">
       <Filter>include\reversi</Filter>
     </ClInclude>
+    <ClInclude Include="include\reversi\player_info_renderer.hpp">
+      <Filter>include\reversi</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\game_board_renderer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\player_info_renderer.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
